# sqlite-gui

./: .gitignore  README.md  deno.json  index.html  package-lock.json  package.json  vite.config.js
.claude/: launch.json
scripts/: bundle.js  dev.js  embed.js  make-icon.mjs
server/: db.js  dialog.js  handlers.js  main.js  menu.js  recent.js  serve.js  worker.js
src/: App.vue  api.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  menu.rs  recent.rs
src/components/: DataView.vue  TableList.vue
web/: package-lock.json  package.json  vite.config.js
web/src/: App.vue  api.js  style.css
